# diffusion

./: CMakeLists.txt  FC.h  coefs.h  main.cpp  radbel.cpp  trial.py
src_fortran/: .functionNTet2.Fast.f.swp  .general.fast.f.swp  .radbelInput(tet2)_kp.doubleQ.f.swp  CMakeLists.txt  Doxyfile  SF24R.FOR  SF25R.FOR  SF33R.FOR  SF34R.FOR  UTSF10.FOR  UTZP10.FOR  ZP10R.FOR  ZP14C.FOR  ZP14R.FOR  besselJ.f  besselJ_new.f  functionN.f  functionNNew.f  functionNTest.f  functionNTet2.Fast.f  functionNTet2.Lyons.Test.f  functionNTet2.Lyons.f  functionNTet2.f  functionNold.f  functionPhi.f  functionQ.f  functionQNew.f  functionQOld.f  localDFull.f  localDMSW.f  localDTet2Dst.longTet.New.Fast.f  radbelInput_tet2_kp.doubleQ.f  specfun.FOR  tags  tbessj_f90.FOR  whistler.kw.f  whistler.kw.full.f  whistler.kw.new.f  whistler.kw.old.f
